--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography mat-app-background">
-  <menu-overview-example></menu-overview-example>
+  <!-- <menu-overview-example></menu-overview-example> -->
+   <app-footer-bar></app-footer-bar>
   <div style="margin-top: 24px">Current build: 18.2.5</div>
 </body>
 </html>
