--- a/src/example/menu-overview-example.html
+++ b/src/example/menu-overview-example.html
@@ -1,48 +1,16 @@
-<!-- #docregion mat-menu-trigger-for -->
-<button mat-button [matMenuTriggerFor]="menu">Menu</button>
-<button mat-button [matMenuTriggerFor]="filterMenu">Menu with panel</button>
-<div mat-button [matMenuTriggerFor]="filterMenu">Div with panel</div>
-<!-- #enddocregion mat-menu-trigger-for -->
-<mat-menu #menu="matMenu">
-  <button mat-menu-item>Item 1</button>
-  <button mat-menu-item>Item 2</button>
-</mat-menu>
+<h1>Menu Overview Example</h1>
+<app-footer-bar></app-footer-bar>
+<br>
+ConversationAndFilter Config {{ pageLevelSaveService.conversationAndFilterConfig$ | async | json }}
 
-<mat-menu #filterMenu="matMenu">
-  <!-- <div style="display:flex; flex-direction: column">
-      <mat-checkbox>Show Resolved 123</mat-checkbox>
-      <mat-checkbox >Show All</mat-checkbox>
-    </div> -->
-  <mat-card>
-    <mat-checkbox>Show Resolved 123</mat-checkbox>
-    <mat-checkbox>Show All</mat-checkbox>
-  </mat-card>
-</mat-menu>
+<br><br>
+<button (click)="updateConfig(false, false)">Disable conversation, disabled filter</button>
+<br>
+<button (click)="updateConfig(false, true)">Disable conversation, enabled filter</button>
+<br>
+<br>
+<button (click)="updateConfig(true, false, [{ label: 'Show Resolved' }])">Enabled conversation, disabled filter</button>
+<br>
+<button (click)="updateConfig(true, true, [{ label: 'Show Resolved' }])">Enabled conversation, enabled filter</button>
 
-<div class="table-container">
-  <div class="header-row">
-    <div class="header-cell">
-      Column 1
-      <button mat-icon-button (click)="openFilter($event)">
-        <mat-icon>filter_list</mat-icon>
-      </button>
-    </div>
-    <!-- Repeat for other columns -->
-  </div>
-  <div class="data-row" *ngFor="let row of data">
-    <div class="data-cell">{{ row.column1 }}</div>
-    <!-- Repeat for other columns -->
-  </div>
-</div>
-
-<div class="overlay" *ngIf="isFilterOpen" (click)="closeFilter()">
-  <app-filter-card
-    class="filter-panel"
-    (click)="$event.stopPropagation()"
-    (filterChange)="onFilterChange($event)"
-  ></app-filter-card>
-</div>
-
-<!-- Copyright 2024 Google LLC. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at https://angular.io/license -->
+<br>
