--- a/src/example/menu-overview-example.html
+++ b/src/example/menu-overview-example.html
@@ -1,3 +1,5 @@
+<!-- <app-global-spinner></app-global-spinner> 
+<button [appDisableWhileLoading]="loadingService.isLoading$| async"(click)="click()">Disabled Button</button>
 <h1>Menu Overview Example</h1>
 <app-footer-bar></app-footer-bar>
 <br>
@@ -13,4 +15,5 @@ ConversationAndFilter Config {{ pageLevelSaveService.conversationAndFilterConfig
 <br>
 <button (click)="updateConfig(true, true, [{ label: 'Show Resolved' }])">Enabled conversation, enabled filter</button>
 
-<br>
+<br> -->
+<app-narrative></app-narrative>
